--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 main {
-	background-image: url("images/headerbackground.jpg");
+	background-image: url("../images/headerbackground.jpg");
 }
 
 /* logo */
@@ -59,7 +59,7 @@ section article {
 
 /* main title: i.e name */
 h1 {
-	font-family: 'Raleway', sans-serif;
+	font-family: "Raleway", sans-serif;
 	font-size: 4em;
 }
 
@@ -70,7 +70,7 @@ h2 {
 
 /* Occupation: front end developer */
 h3 {
-	font-family: 'Open Sans',sans-serif;
+	font-family: "Open Sans",sans-serif;
 	font-size: 1.7em;
 }
 
@@ -79,12 +79,12 @@ a {
 	font-size: 1.3em;
 }
 
-h3, a{
+h3, a {
 	color: #2d3c49 !important;
 }
 
 /* Title of project */
-main h3{
+main h3 {
 	font-weight: 200 !important;
 }
 
@@ -97,17 +97,17 @@ footer {
 	text-align: center;
 }
 
-footer ul{
+footer ul {
 	list-style-type: none;
 	padding-top: 5%;
 }
 
-footer li{
+footer li {
 	display: inline;
 	margin: 5%;
 }
 
-footer a{
+footer a {
 	color: #02b3e4 !important; 
 }
 
